syntax = "proto3";
package pt.tecnico.ulisboa.hds.hdlt.contract.uu;

/*====================
| User-User Services |
====================*/
service UserUserServices {
  rpc RequestULProof(RequestULProofReq) returns (RequestULProofRep);
}

/*=============
| Definitions |
=============*/
message Header {
  string uname = 1;
  int32 epoch = 2;
  bytes nonce = 3;
}

message Proof {
  string uname = 1;
  int32 epoch = 2;
  // Location
  int32 x = 3;
  int32 y = 4;
}

/*=========================
| RequestULProof Messages |
=========================*/
message RequestULProofReq {
  Header header = 1;
  bytes signature = 2;
}

message RequestULProofRep {
  bytes signedProof = 1;
  bytes signature = 2;
}
